...
    "Edit Rule" : {

    },
    "Edit Seerr Account" : {

    },
    "Edit Server" : {

    },
    "Edit Servers" : {

    },
    "Edit Tracker" : {
...
    "No Releases Found" : {

    },
    "No Remote Path Mappings" : {

    },
    "No Requests" : {

    },
    "No requests match the current filter." : {
      "comment" : "A description of the empty state when there are no requests.",
      "isCommentAutoGenerated" : true
    },
...
    "Retention" : {

    },
    "Retention (days)" : {

    },
    "Retry" : {

    },
    "Retry Connections" : {

    },
    "Retrying in %@" : {
...
    "Some releases are hidden by the selected filters." : {

    },
    "Some subtitle providers require an anti-captcha service before they can search or download reliably." : {

    },
    "Sonarr" : {

    },
    "Sonarr and Radarr library matching will be added in a later Jellyfin admin phase." : {

    },
    "Sonarr Service" : {
...
